--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseInvoiceViewModel
+﻿@model MyLeoRetailer.Models.PurchaseInvoiceViewModel
 
 
 <script src="~/Scripts/Modules/common_methods.js"></script>
