--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/View.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseInvoiceViewModel
+﻿@model MyLeoRetailer.Models.PurchaseInvoiceViewModel
 
 <script src="~/Scripts/Modules/PurchaseInvoice/search_purchaseinvoice_methods.js"></script>
 <script src="~/Scripts/Modules/PurchaseInvoice/search_purchaseinvoice_events.js"></script>
