--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseOrderViewModel
+﻿@model MyLeoRetailer.Models.PurchaseOrderViewModel
 
 
 <script src="~/Scripts/Modules/common_methods.js"></script>
