--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseOrderRequestViewModel
+﻿@model MyLeoRetailer.Models.PurchaseOrderRequestViewModel
 
 
 <script src="~/Scripts/Modules/common_methods.js"></script>
