--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/View.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseOrderRequestViewModel
+﻿@model MyLeoRetailer.Models.PurchaseOrderRequestViewModel
 
 <div class="content-frame">
 
