--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Index.cshtml
@@ -1,9 +1,8 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseReturnViewModel
+﻿@model MyLeoRetailer.Models.PurchaseReturnViewModel
 
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_events.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_methods.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturn/purchasereturn_validation.js"></script>
-<script src="~/Scripts/Modules/common_methods.js"></script>
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
