--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseReturnViewModel
+﻿@model MyLeoRetailer.Models.PurchaseReturnViewModel
 @{
     ViewBag.Title = "View_Purchase_Return_Details";
 }
