--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/_Update_GR_No.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/_Update_GR_No.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseReturnViewModel
+﻿@model MyLeoRetailer.Models.PurchaseReturnViewModel
 
 <form id="frmUpdateGRNo" enctype="multipart/form-data">
     <div class="row" style="margin-bottom: 10px; border-bottom: 1px solid rgba(153, 153, 153, 0.13)">
