--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/Index.cshtml
@@ -3,6 +3,7 @@
 <script src="~/Scripts/Modules/PurchaseReturnRequest/purchase-return-request-validation.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturnRequest/purchase-return-request-event.js"></script>
 <script src="~/Scripts/Modules/PurchaseReturnRequest/purchase-return-request-method.js"></script>
+<script src="~/Scripts/Modules/common_methods.js"></script>
 
 
 <ul class="breadcrumb" style="margin-bottom: 0px;">
