--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseInvoiceViewModel
+﻿@model MyLeoRetailer.Models.PurchaseInvoiceViewModel
 
 <script src="~/Scripts/Modules/PurchaseInvoice/purchaseinvoice_validation.js"></script>
 <script src="~/Scripts/Modules/PurchaseInvoice/purchaseinvoice_events.js"></script>
@@ -298,9 +298,9 @@
                                         <td>
                                             <div class="form-group auto-complete">
                                                 <div class="input-group">
-                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);" placeholder="Enter SKU to search" value="" data-table="Product_SKU_Mapping" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code" data-param="hdnPurchase_Order_Id_0" data-field="Purchase_Order_Id" />
+                                                    <input type="text" class="form-control invoice-filter autocomplete-text" id="textSKU_No_0" onblur="javascript: Get_Purchase_Invoice_Items_By_SKU_Code(0);" placeholder="Enter SKU to search" value="" data-table="Product_SKU_Mapping" data-col="Quantity,SKU_Code" data-headernames="SKU Code" data-param="hdnPurchase_Order_Id_0" data-field="Purchase_Order_Id" />
                                                     <span class="input-group-addon"><a href="#" class="text-muted div_SKU" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                                    <input type="hidden" id="hdnProduct_Id_0" value="" class="auto-complete-value" />
+                                                    <input type="hidden" id="hdnQuantity_0" value="" class="auto-complete-value" />
                                                     <input type="hidden" id="hdnSKU_No_0" value="" name="PurchaseInvoice.PurchaseInvoices[0].SKU_Code" class="auto-complete-label" />
                                                 </div>
                                             </div>
@@ -356,7 +356,7 @@
 
                     <div class="row">
                         <div class="table-responsive" style="width:100%;">
-                            <table class="table table-bordered" id="tblPurchaseInvoiceItems">
+                            <table class="table table-bordered" id="tblPurchaseInvoice">
                                 <thead>
                                     <tr></tr>
                                 </thead>
