--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyLeoRetailer.Models.Transaction.PurchaseReturnViewModel
+﻿@model MyLeoRetailer.Models.PurchaseReturnViewModel
 
 
 <script src="~/Scripts/Modules/common_methods.js"></script>
