--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -4,9 +4,10 @@
 
 
 <script src="~/Scripts/Modules/common_methods.js"></script>
+<script src="~/Scripts/Modules/Receivable/Receivable_Validation.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_events.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_methods.js"></script>
-<script src="~/Scripts/Modules/Receivable/Receivable_Validation.js"></script>
+
 
 
 <!-- START BREADCRUMB -->
@@ -58,6 +59,8 @@
                                     <input type="hidden" id="hdnReceivable_Item_Id" name="Receivable.Receivable_Item_Id" value="@Model.Receivable.Receivable_Item_Id">
                                     <input type="hidden" id="hdnReceivable_Id" name="Receivable.Receivable_Id" value="@Model.Receivable.Receivable_Id">
                                     <input type="hidden" id="hdnCustomer_Id" name="Receivable.Customer_Id" value="@Model.Receivable.Customer_Id">
+
+                                    
                                 </div>
                             </div>
                         </div>
@@ -99,7 +102,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Cash Amount</span>
-                                    <input type="text" class="form-control input-sm" name="Receivable.Cash_Amount" id="txtCash_amount" onfocusout="javascript: Get_Balance_Amount_Using_Cash_Amount();" value="@(Model.Receivable.Cash_Amount == 0 ? "" : Model.Receivable.Cash_Amount.ToString())" placeholder="Cash Amount" maxlength="10" />
+                                    <input type="text" class="form-control input-sm" name="Receivable.Cash_Amount" id="txtCash_amount" @*onfocusout="javascript: Get_Balance_Amount_Using_Cash_Amount(this);"*@ value="@(Model.Receivable.Cash_Amount == 0 ? "" : Model.Receivable.Cash_Amount.ToString())" placeholder="Cash Amount" maxlength="10" />
                                 </div>
                             </div>
 
@@ -145,7 +148,7 @@
                             <div class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Cheque Amount</span>
-                                    <input type="text" class="form-control input-sm" name="Receivable.Cheque_Amount" id="txtCheque_Amount" onfocusout="javascript: Get_Balance_Amount_Using_Cheque_Amount();" value="@(Model.Receivable.Cheque_Amount == 0 ? "" : Model.Receivable.Cheque_Amount.ToString())" placeholder="Enter Cheque Amount " maxlength="10" />
+                                    <input type="text" class="form-control input-sm" name="Receivable.Cheque_Amount" id="txtCheque_Amount" @*onfocusout="javascript: Get_Balance_Amount_Using_Cheque_Amount();"*@ value="@(Model.Receivable.Cheque_Amount == 0 ? "" : Model.Receivable.Cheque_Amount.ToString())" placeholder="Enter Cheque Amount " maxlength="10" />
                                 </div>
                             </div>
 
@@ -199,7 +202,7 @@
                             <div id="divPaidAmount" class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Credit Note Amount</span>
-                                    <input type="text" class="form-control input-sm" name="Receivable.Credit_Note_Amount" id="txtCredit_Note_Amount" onblur="javascript: Get_Balance_Amount_Using_Credit_Note_Amount();" value="@(Model.Receivable.Credit_Note_Amount == 0 ? "" : Model.Receivable.Credit_Note_Amount.ToString())" placeholder=" Enter Paid amount" maxlength="20"/>
+                                    <input type="text" class="form-control input-sm" name="Receivable.Credit_Note_Amount" id="txtCredit_Note_Amount" @*onblur="javascript: Get_Balance_Amount_Using_Credit_Note_Amount();"*@ value="@(Model.Receivable.Credit_Note_Amount == 0 ? "" : Model.Receivable.Credit_Note_Amount.ToString())" placeholder=" Enter Paid amount" maxlength="20"/>
                                 </div>
                             </div>
 
@@ -229,7 +232,7 @@
                             <div id="divCreditcardno" class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Card Amount</span>
-                                    <input type="text" class="form-control input-sm" name="Receivable.Card_Amount" id="txtCard_Amount" onfocusout="javascript: Get_Balance_Amount_Using_Card_Amount();" value="@(Model.Receivable.Card_Amount == 0 ? "" : Model.Receivable.Card_Amount.ToString())" placeholder="Card Amount" maxlength="10" />
+                                    <input type="text" class="form-control input-sm" name="Receivable.Card_Amount" id="txtCard_Amount" @*onfocusout="javascript: Get_Balance_Amount_Using_Card_Amount();"*@ value="@(Model.Receivable.Card_Amount == 0 ? "" : Model.Receivable.Card_Amount.ToString())" placeholder="Card Amount" maxlength="10" />
                                 </div>
                             </div>
 
@@ -272,7 +275,7 @@
                             <div id="divDebitcardno" class="col-md-3">
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Gift Voucher Amount </span>
-                                    <input type="text" class="form-control input-sm" name="Receivable.Gift_Voucher_Amount" id="txtGift_Voucher_Amount" onchange="javascript: Get_Balance_Amount_Using_Gift_Voucher_Amount();" value="@(Model.Receivable.Gift_Voucher_Amount == 0 ? "" : Model.Receivable.Gift_Voucher_Amount.ToString())" placeholder="Enter Gift Voucher Amount" maxlength="20" readonly />
+                                    <input type="text" class="form-control input-sm" name="Receivable.Gift_Voucher_Amount" id="txtGift_Voucher_Amount" @*onchange="javascript: Get_Balance_Amount_Using_Gift_Voucher_Amount();"*@ value="@(Model.Receivable.Gift_Voucher_Amount == 0 ? "" : Model.Receivable.Gift_Voucher_Amount.ToString())" placeholder="Enter Gift Voucher Amount" maxlength="20" readonly />
                                 </div>
                             </div>
 
@@ -354,16 +357,40 @@
                                                 <input type='hidden' id="hdnBranchName@(itm.Receivable_Item_Id)" name="Receivable.Branch_Name" value="@Model.Receivable.Branch_Name">
                                             </td>
                                             <td>
-                                                <span> @itm.Cash_Amount</span>
+                                                @if (itm.Cash_Amount == 0)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Cash_Amount</span>
+                                                }
+                                                
                                                 <input type="hidden" id="hdnCash_Amount@(itm.Receivable_Item_Id)" name="Receivable.Cash_Amount[@(i-1)]" value="@itm.Cash_Amount">
                                             </td>
 
                                             <td>
-                                                <span> @itm.Cheque_Amount</span>
+                                                @if (itm.Cheque_Amount == 0)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Cheque_Amount</span>
+                                                }
+                                                
                                                 <input type="hidden" id="hdnCheque_Amount@(itm.Receivable_Item_Id)" name="Receivable.Cheque_Amount[@(i-1)]" value="@itm.Cheque_Amount">
                                             </td>
                                             <td>
-                                                <span> @itm.Cheque_No</span>
+                                                @if (itm.Cheque_No == null)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Cheque_No</span>
+                                                }
+                                                
                                                 <input type="hidden" id="hdnCheque_No@(itm.Receivable_Item_Id)" name="Receivable.Cheque_No[@(i-1)]" value="@itm.Cheque_No">
                                             </td>
                                             <td>
@@ -378,15 +405,41 @@
                                                 <input type="hidden" id="hdnCheque_Date@(itm.Receivable_Item_Id)" name="Receivable.Cheque_Date[@(i-1)]" value="@itm.Cheque_Date.ToShortDateString()">
                                             </td>
                                             <td>
-                                                <span> @itm.Bank_Name</span>
+
+                                                @if (itm.Bank_Name == null)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Bank_Name</span>
+                                                }
+                                              
                                                 <input type="hidden" id="hdnBank_Name@(itm.Receivable_Item_Id)" name="Receivable.Bank_Name[@(i-1)]" value="@itm.Bank_Name">
                                             </td>
                                             <td>
-                                                <span> @itm.Credit_Note_No</span>
+
+                                                @if (itm.Credit_Note_No == null)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Credit_Note_No</span>
+                                                }
+                                                
                                                 <input type="hidden" id="hdnCredit_Note_No@(itm.Receivable_Item_Id)" name="Receivable.Credit_Note_No[@(i-1)]" value="@itm.Sales_Credit_Note_Id">
                                             </td>
                                             <td>
-                                                <span> @itm.Credit_Note_Amount</span>
+                                                @if (itm.Credit_Note_Amount == 0)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Credit_Note_Amount</span>
+                                                }
+                                               
                                                 <input type="hidden" id="hdnCredit_Note_Amount@(itm.Receivable_Item_Id)" name="Receivable.Credit_Note_Amount[@(i-1)]" value="@itm.Credit_Note_Amount">
                                             </td>
                                             <td>
@@ -401,19 +454,53 @@
                                                 <input type="hidden" id="hdnCredit_Note_Date@(itm.Receivable_Item_Id)" name="Receivable.Credit_Note_Date[@(i-1)]" value="@itm.Credit_Note_Date.ToShortDateString()">
                                             </td>
                                             <td>
-                                                <span> @itm.Credit_Card_No</span>
+                                                @if (itm.Credit_Card_No == null)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Credit_Card_No</span>
+                                                }
+                                               
                                                 <input type="hidden" id="hdnCredit_Card_No@(itm.Receivable_Item_Id)" name="Receivable.Credit_Card_No[@(i-1)]" value="@itm.Credit_Card_No">
                                             </td>
                                             <td>
-                                                <span> @itm.Card_Amount</span>
+
+                                                @if (itm.Card_Amount == 0)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Card_Amount</span>
+                                                }
+                                                
+                                                
                                                 <input type="hidden" id="hdnCard_Amount@(itm.Receivable_Item_Id)" name="Receivable.Card_Amount[@(i-1)]" value="@itm.Card_Amount">
                                             </td>
                                             <td>
-                                                <span> @itm.Gift_Voucher_No</span>
+                                                @if (itm.Gift_Voucher_No == null)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Gift_Voucher_No</span>
+                                                }
+                                               
                                                 <input type="hidden" id="hdnGift_Voucher_No@(itm.Receivable_Item_Id)" name="Receivable.Gift_Voucher_No[@(i-1)]" value="@itm.Gift_Voucher_Id">
                                             </td>
                                             <td>
-                                                <span> @itm.Gift_Voucher_Amount</span>
+                                                @if (itm.Gift_Voucher_Amount == 0)
+                                                {
+                                                    <span>NA</span>
+                                                }
+                                                else
+                                                {
+                                                    <span> @itm.Gift_Voucher_Amount</span>
+                                                }
+                                                
                                                 <input type="hidden" id="hdnGift_Voucher_Amount@(itm.Receivable_Item_Id)" name="Receivable.Gift_Voucher_Amount[@(i-1)]" value="@itm.Gift_Voucher_Amount">
                                             </td>
 
