changes in receivable

--- a/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/SalesOrder/Index.cshtml
@@ -145,7 +145,7 @@
 
                                 @*Changes Required once pulled*@
 
-                                <input type="hidden" id="hdnEmployee_Id" name="Cookies.Employee_Id" value="5" />
+                                <input type="hidden" id="hdnEmployee_Id" name="Cookies.Employee_Id" value="Sales" />
 
                                 @*<div class="col-md-3">
                                         <div class="form-group">
@@ -321,7 +321,7 @@
                                                 @*<input class="form-control input-sm" type="text" name="SaleOrderItemList[0].SalesMan" id="textSalesMan_0" placeholder="SalesMan">*@
                                                 <div class="form-group auto-complete">  
                                                     <div class="input-group">
-                                                        <input type="text" class="form-control invoice-filter autocomplete-text" name="SaleOrderItemList[0].SalesMan" style="width:80px" id="textSalesMan_0" placeholder="Enter SalesMan" value="" data-table="Employee" data-col="Employee_Id,Employee_Name" data-headernames="Employee" data-param="hdnEmployee_Id" data-field="Role_Id">
+                                                        <input type="text" class="form-control invoice-filter autocomplete-text" name="SaleOrderItemList[0].SalesMan" style="width:80px" id="textSalesMan_0" placeholder="Enter SalesMan" value="" data-table="Employee" data-col="Employee_Id,Employee_Name" data-headernames="Employee" data-param="hdnEmployee_Id" data-field="Sales_Invoice">
                                                         <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
                                                         <input type="hidden" id="hdnSalesManId_0" value="" name="SaleOrderItemList[0].SalesMan_Id" class="auto-complete-value" />
                                                         <input type="hidden" id="hdnSalesMan_0" value="" name="SaleOrderItemList[0].SalesMan" class="auto-complete-label" />
