--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Dispatched_Product_Listing.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Dispatched_Product_Listing.cshtml
@@ -70,6 +70,10 @@
         <div class="col-md-6" style="text-align: right; padding-top: 0px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
             <div class="btn-group pull-right">
+                <a class="btn btn-danger" role="button" id="btnRejected">Reject Dispatch </a>
+
+            </div>
+            <div class="btn-group pull-right">
                 <a class="btn btn-success active" role="button" id="btnAccept">Accept Dispatch </a>
                 
             </div>
