--- a/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductDispatch/Index.cshtml
@@ -81,12 +81,11 @@
 
                                 <div class="form-group">
                                     <span class="label label-primary label-form" style="margin-bottom: 1px;">Dispatch Quantity</span>
-                                    <input type="text" class="form-control input-sm" name="product_Dispatch.Quantity" id="txtDispatch_Quantity" placeholder="Enter Dispatch Quantity." />
+                                    <input type="text" class="form-control input-sm" name="product_Dispatch.Quantity" id="txtDispatch_Quantity" placeholder="Enter Dispatch Quantity."  />
                                 </div>
                             </div>
 
                         </div>
-
 
                     </div>
 
@@ -140,6 +139,11 @@
                                                     {
                                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Dispatch Accepted</span>
                                                     }
+                                                    else if (item.Accept_Status == "Rejected")
+                                                    {
+                                                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Dispatch Rejected</span>
+                                                         <a class="btn btn-danger active" role="button" id="btnDispatch" onclick="Delete_Dispatch_Product(this)">Delete</a>
+                                                    }
                                                     else
                                                     {
                                                         <a class="btn btn-danger active" role="button" id="btnDispatch" onclick="Delete_Dispatch_Product(this)">Delete</a>
@@ -150,6 +154,7 @@
                                     }
                                 </tbody>
                             </table>
+                        <label id="lbl_Records_Required" style="display:none;"><span style="color:red;">Atleast One Record is required</span></label>
                         </div><!-- /.col -->
                     </div><!-- /.row -->
 
