--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Search.cshtml
@@ -63,7 +63,7 @@
                         <div class="col-md-7" style="text-align: right; padding-top: 30px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button role="button" class="btn btn-success active" value="Create" id="btnCreateBranch">Create</button>
+                                <button role="button"  value="Create" id="btnCreateBranch">Create</button>
                                 <button class="btn btn-danger active" role="button" style="display:none" value="Edit" id="btnEditBranch">Edit</button>
                             </div>
 
