--- a/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
@@ -46,10 +46,11 @@
                         <div class="col-md-10">
                             <div class="form-group auto-complete">
                                 <div class="input-group">
-                                    <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Article_No" id="txtArticle_No" placeholder="Enter Product article no." value="" data-table="Product" data-col="Product_Id,Article_No" data-headernames="Product">
+                                    <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Article_No" id="txtArticle_No" placeholder="Enter Product article no." data-table="Product" data-col="Product_Id,Article_No" data-headernames="Product">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                    <input type="hidden" id="hdnProduct_Id" value="" name="Filter.Product_Id" class="auto-complete-value" />
-                                    <input type="hidden" id="hdnArticle_No" value="" name="Filter.Article_No" class="auto-complete-label" />
+                                    <input type="hidden" id="hdnProduct_Id" value="" name="Product.Product_Id"  />
+                                    <input type="hidden" id="hdnArticle_No" value="" name="Filter.Article_No" class="auto-complete-value" />
+                                   
                                 </div>
                             </div>
                         </div>
