--- a/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/ProductWarehouse/Search.cshtml
@@ -45,9 +45,9 @@
                             <div class="form-group auto-complete">
                                 <div class="input-group">
 
-                                    <input type="text" class="form-control color-filter autocomplete-text" id="textSKU_No_0" placeholder="Enter SKU to search." value="" data-table="Purchase_Invoice_Item" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code">
+                                    <input type="text" class="form-control color-filter autocomplete-text" id="textSKU_No_0" name="Filter.Product_SKU" placeholder="Enter SKU to search." value="" data-table="Purchase_Invoice_Item" data-col="Purchase_Order_Id,SKU_Code" data-headernames="SKU Code">
                                     <span class="input-group-addon"> <a href="#" class="text-muted" id="hrefDealer" role="button"> <i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                                    <input type="hidden" id="hdnProduct_SKU" value="" name="Filter.Product_SKU" class="auto-complete-value" />
+                                    <input type="hidden" id="hdnProduct_SKU"  name="Filter.Product_SKU" class="auto-complete-value" />
 
                                 </div>
                             </div>
