--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Index.cshtml
@@ -34,58 +34,56 @@
 
         <div class="row">
             @*Added by vinod Mane on 03/10/2016*@
-            <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 130px;">
-            <div class="block">
-                <h4 style="margin-top: 0px;">Branch Details.</h4>
+            <div class="col-md-4" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 150px;">
+                <div class="block">
+                    <h4 style="margin-top: 0px;">Branch Details.</h4>
 
-                <div class="form-group auto-complete">
-                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch Name.</span>
-                    <div class="input-group">
-                        <input type="text" class="form-control autocomplete-text" id="textBrand" name="Branch" placeholder="Branch name" value="" data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branches" data-param="hdnCookiesBranches" data-field="Branch_ID" />
-                        <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
-                        <input type="hidden" id="hdnBranch_Id" value="" name="PurchaseOrderRequest.Branch_Id" class="auto-complete-value" />
-                        <input type="hidden" id="hdnBranch_Name" value="" name="PurchaseOrderRequest.Branch_Name" class="auto-complete-label" />
+                    <div class="form-group auto-complete">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Branch Name.</span>
+                        <div class="input-group">
+                            <input type="text" class="form-control autocomplete-text" id="textBrand" name="Branch" placeholder="Branch name" value="" data-table="Branch" data-col="Branch_ID,Branch_Name" data-headernames="Branches" data-param="hdnCookiesBranches" data-field="Branch_ID" />
+                            <span class="input-group-addon"><a href="#" class="text-muted" id="hrefDealer" role="button"><i class="fa fa-search" style="color:#fff;" aria-hidden="true"></i></a></span>
+                            <input type="hidden" id="hdnBranch_Id" value="" name="PurchaseOrderRequest.Branch_Id" class="auto-complete-value" />
+                            <input type="hidden" id="hdnBranch_Name" value="" name="PurchaseOrderRequest.Branch_Name" class="auto-complete-label" />
+                        </div>
                     </div>
-                </div>
 
-            </div>
+                </div>
             </div>
             @*End*@
 
-            <div class="col-md-14" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 130px;">
+            <div class="col-md-8" style="background: rgba(0, 0, 0, 0.02); border-bottom: 1px solid #DDD; border-right: 1px solid #DDD; padding: 10px; height: 150px;">
+                <div class="block">
+                    <input type="hidden" class="form-control input-sm" name="PurchaseOrderRequest.Purchase_Order_Request_Id" id="hdf_Purchase_Order_Request_Id" value="@Model.PurchaseOrderRequest.Purchase_Order_Request_Id" />
 
-                <input type="hidden" class="form-control input-sm" name="PurchaseOrderRequest.Purchase_Order_Request_Id" id="hdf_Purchase_Order_Request_Id" value="@Model.PurchaseOrderRequest.Purchase_Order_Request_Id" />
+                    <h4 style="margin-top: 0px;">Vendor details.</h4>
 
-                <h4 style="margin-top: 0px;">Vendor details.</h4>
+                    <input type="hidden" id="hdf_Vendor_Id" />
 
-                <input type="hidden" id="hdf_Vendor_Id" />
 
-               
 
-                <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
-                <div class="form-group col-md-4">
-                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor name.</span>
-                    <select class="form-control select" name="PurchaseOrderRequest.Vendor_Id" onchange="Set_Vendor_Id(this.value)">
-                        <option value="">Select Vendor</option>
-                        @foreach (var item in Model.PurchaseOrderRequest.Vendors)
-                        {
-                            if (Model.PurchaseOrderRequest.Vendor_Id == item.Vendor_Id)
+                    <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
+                    <div class="form-group col-md-4">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Vendor name.</span>
+                        <select class="form-control select" name="PurchaseOrderRequest.Vendor_Id" onchange="Set_Vendor_Id(this.value)">
+                            <option value="">Select Vendor</option>
+                            @foreach (var item in Model.PurchaseOrderRequest.Vendors)
                             {
-                                <option value="@item.Vendor_Id" selected="selected">@item.Vendor_Name</option>
+                                if (Model.PurchaseOrderRequest.Vendor_Id == item.Vendor_Id)
+                                {
+                                    <option value="@item.Vendor_Id" selected="selected">@item.Vendor_Name</option>
+                                }
+                                else
+                                {
+                                    <option value="@item.Vendor_Id">@item.Vendor_Name</option>
+                                }
                             }
-                            else
-                            {
-                                <option value="@item.Vendor_Id">@item.Vendor_Name</option>
-                            }
-                        }
-                    </select>
+                        </select>
+                    </div>
+
                 </div>
-
             </div>
-
         </div>
-
-
 
         <div class="row">
             <div class="col-md-12">
@@ -99,6 +97,20 @@
         <div class="row">
             <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 90px;">
 
+                <input type="hidden" id="hdf_Article_No" />
+                <div class="block">
+                    <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Article No.</span>
+                        <select class="form-control " id="drpArticle_No" name="PurchaseOrderRequest.Article_No" onchange="Set_Article_No(this.value)">
+                            <option value="">Select Article No.</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 90px;">
+
                 <div class="block">
 
                     <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
@@ -106,17 +118,6 @@
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Size group.</span>
                         <select class="form-control " id="drpSize_Group" name="PurchaseOrderRequest.Size_Group_Id" onchange="Show_Button()">
                             <option value="">Select Size Group</option>
-                            @foreach (var item in Model.PurchaseOrderRequest.SizeGroups)
-                            {
-                                if (Model.PurchaseOrderRequest.Size_Group_Id == item.Size_Group_Id)
-                                {
-                                    <option value="@item.Size_Group_Id" selected="selected">@item.Size_Group_Name</option>
-                                }
-                                else
-                                {
-                                    <option value="@item.Size_Group_Id">@item.Size_Group_Name</option>
-                                }
-                            }
                         </select>
                     </div>
 
@@ -124,7 +125,7 @@
 
             </div>
 
-            <div class="col-md-9" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 90px;">
+            <div class="col-md-6" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 90px;">
 
                 <div class="block" style="margin-top:26px;">
                     <div class="btn-group">
@@ -140,7 +141,7 @@
                     <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Color.</span>
-                        <select class="form-control select" id="drpColor" name="PurchaseOrder.Colour_Id">
+                        <select class="form-control select" id="drpColor" name="PurchaseOrderRequest.Colour_Id">
                             <option value="">Select Color</option>
                         </select>
                     </div>
@@ -148,29 +149,26 @@
                 </div>
 
             </div>
-        </div>
 
-        <div class="row Details">
 
-            <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 180px;">
+            <div class="col-md-3" hidden>
 
                 <div class="block">
-                    <!-- This should be an auto complete field / lookup field like Krypton with search filter / dropdown field -->
-                    <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Article No.</span>
-                        <select class="form-control " id="drpArticle_No" name="PurchaseOrderRequest.Article_No" >
-                            <option value="">Select Article No.</option>
-                        </select>
-                    </div>
 
                     <div class="form-group">
-                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Center size.</span>
-                        <select class="form-control " id="drpCenter_Size" name="PurchaseOrderRequest.Center_Size">
+                        <select class="form-control " id="drpTemp_Center_Size">
                             <option value="">Select Center Size</option>
                         </select>
                     </div>
+
                 </div>
+
             </div>
+                       
+
+        </div>
+
+        <div class="row Details">
 
             <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 180px;">
 
@@ -228,6 +226,17 @@
                 </div>
             </div>
 
+            <div class="col-md-3" style="border-bottom: 1px solid #DDD; padding: 0px 10px 10px 10px; height: 180px;">
+
+                <div class="block">
+                    <div class="form-group">
+                        <span class="label label-primary label-form" style="margin-bottom: 1px;">Center size.</span>
+                        <select class="form-control " id="drpCenter_Size" name="PurchaseOrder.Center_Size">
+                            <option value="">Select Center Size</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -331,6 +340,7 @@
 
             </div>
         </div>
+
     </form>
 
 </div>
