--- a/MyLeoRetailer/Views/PostLogin/Master/Branch/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Branch/Index.cshtml
@@ -59,12 +59,12 @@
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no1.</span>
-                        <input type="text" class="form-control" placeholder="Enter landline number 1." name="Branch.Branch_Landline1" value="@Model.Branch.Branch_Landline1" maxlength="12" />
+                        <input type="text" class="form-control" placeholder="Enter landline number 1." id="txtBranch_Landline1" name="Branch.Branch_Landline1" value="@Model.Branch.Branch_Landline1" maxlength="12" />
                     </div>
 
                     <div class="form-group">
                         <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no2.</span>
-                        <input type="text" class="form-control" placeholder="Enter landline number 2." name="Branch.Branch_Landline2" value="@Model.Branch.Branch_Landline2" maxlength="12" />
+                        <input type="text" class="form-control" placeholder="Enter landline number 2." id="txtBranch_Landline2" name="Branch.Branch_Landline2" value="@Model.Branch.Branch_Landline2" maxlength="12" />
                     </div>
                 </div>
 
