--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Search.cshtml
@@ -89,8 +89,8 @@
                         <div class="col-md-2" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button role="button" class="btn btn-success active" value="Create" id="btnCreateCustomer">Create</button>
-                                <button class="btn btn-danger active" style="display:none" value="Edit" id="btnEditCustomer">Edit</button>
+                                <button type="button" class="btn btn-success active" value="Create" id="btnCreateCustomer">Create</button>
+                                <button type="button" class="btn btn-danger active" style="display:none" value="Edit" id="btnEditCustomer">Edit</button>
                             </div>
 
                         </div>
