--- a/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Employee/Search.cshtml
@@ -123,10 +123,10 @@
                                 @*<button class="btn btn-success active" onclick="location.href='@Url.Action("Index","Employee")'">Create</button>*@
                                 @*<a class="btn btn-success active" role="button" href="@Url.Action("Index", "Employee")">Create </a>
                                     <button class="btn btn-danger active" style="display:none;" id="btnEdit" >Edit</button>*@
-                                <button role="button" class="btn btn-info active" value="Create" id="btnMapBranchEmployee" style="display:none">Map Branch to Employee </button>
-                                <button role="button" class="btn btn-success active" value="Create" id="btnCreateEmployee">Create</button>
+                                <button type="button" class="btn btn-info active" value="Create" id="btnMapBranchEmployee" style="display:none">Map Branch to Employee </button>
+                                <button type="button" class="btn btn-success active" value="Create" id="btnCreateEmployee">Create</button>
                                 @*modification*@
-                                <button class="btn btn-danger active" value="Edit" style="display:none;" id="btnEditEmployee">Edit</button>
+                                <button type="button" class="btn btn-danger active" value="Edit" style="display:none;" id="btnEditEmployee">Edit</button>
                                 @*End*@
                             </div>
 
