--- a/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Product/Search.cshtml
@@ -43,7 +43,7 @@
                                     <input type="text" class="form-control" placeholder="Enter Product article no." name="Filter.Article_No" />
                                 </div>
                             </div>*@
-                        <div class="col-md-10">
+                        <div class="col-md-3">
                             <div class="form-group auto-complete">
                                 <div class="input-group">
                                     <input type="text" class="form-control brand-filter autocomplete-text" name="Filter.Article_No" id="txtArticle_No" placeholder="Enter Product article no." value="" data-table="Product" data-col="Product_Id,Article_No" data-headernames="Product">
@@ -59,9 +59,9 @@
                         <div class="block">
                             <div class="col-md-10" style="padding-top: 20px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;"> 
                                 <div class="btn-group"> 
-                                    <a class="btn btn-success active" role="button" href="@Url.Action("Index", "Product")">Create </a>
-                                    <button class="btn btn-danger active" id="btnEdit" style="display:none">Edit</button> 
-                                    <button class="btn btn-success active" id="btnProductMRP" style="display:none">Add Product MRP</button>
+                                    <a type="button" class="btn btn-success active" role="button" href="@Url.Action("Index", "Product")">Create </a>
+                                    <button type="button" class="btn btn-danger active" id="btnEdit" style="display:none">Edit</button> 
+                                    <button type="button" class="btn btn-success active" id="btnProductMRP" style="display:none">Add Product MRP</button>
                                 </div>
 
                             </div>
