--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
@@ -39,7 +39,7 @@
 
                     <div class="row">
 
-                        <div class="col-md-5">
+                        <div class="col-md-3">
 
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order No.</span>
@@ -52,9 +52,9 @@
                         <div class="col-md-7" style="text-align: right; padding-top: 25px; padding-bottom: 0px; padding-right: 0px; padding-left: 0px;">
 
                             <div class="btn-group">
-                                <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrder">Create</button>
-                                <button class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrder">View</button>
-                                <button class="btn btn-info active" value="View" id="btnViewPurchaseOrder">Print</button>
+                                <button type="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrder">Create</button>
+                                <button type="button" class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrder">View</button>
+                                <button type="button" class="btn btn-info active" value="View" id="btnViewPurchaseOrder">Print</button>
                             </div>
 
                         </div>
