--- a/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Color/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model MyLeoRetailer.Models.ColorViewModel
+
 @{
     ViewBag.Title = "Index";
 }
@@ -87,7 +88,7 @@
                     </div>
 
                     <div class="form-group">
-                        <div class="form-group input-group color" data-color="rgb(255, 146, 180)" data-color-format="rgb" id="colorpicker">
+                        <div class="input-group color" data-color="rgb(255, 146, 180)" data-color-format="rgb" id="colorpicker">
                             <input class="form-control" type="text" name="Color.Colour_Code" maxlength="50">
                             <span class="input-group-addon"><i id="iRGBColor" style="background-color: rgb(154, 42, 77);"></i></span>
                         </div>
