--- a/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Customer/Index.cshtml
@@ -185,32 +185,32 @@
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no1.</span>
-                <input type="text" class="form-control" placeholder="Enter mobile number 1." name="Customer.Customer_Mobile1" value="@Model.Customer.Customer_Mobile1" maxlength="12" />
+                <input type="text" class="form-control" placeholder="Enter mobile number 1." id="txtCustomer_Mobile1" name="Customer.Customer_Mobile1" value="@Model.Customer.Customer_Mobile1" maxlength="12" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Mobile no2.</span>
-                <input type="text" class="form-control" placeholder="Enter mobile number 2." name="Customer.Customer_Mobile2" value="@Model.Customer.Customer_Mobile2" maxlength="12" />
+                <input type="text" class="form-control" placeholder="Enter mobile number 2." id="txtCustomer_Mobile2" name="Customer.Customer_Mobile2" value="@Model.Customer.Customer_Mobile2" maxlength="12" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no1.</span>
-                <input type="text" class="form-control" placeholder="Enter landline number 1." name="Customer.Customer_Landline1" value="@Model.Customer.Customer_Landline1" maxlength="12" />
+                <input type="text" class="form-control" placeholder="Enter landline number 1." id="txtCustomer_Landline1" name="Customer.Customer_Landline1" value="@Model.Customer.Customer_Landline1" maxlength="12" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Landline no2.</span>
-                <input type="text" class="form-control" placeholder="Enter landline number 2." name="Customer.Customer_Landline2" value="@Model.Customer.Customer_Landline2" maxlength="12" />
+                <input type="text" class="form-control" placeholder="Enter landline number 2." id="txtCustomer_Landline2" name="Customer.Customer_Landline2" value="@Model.Customer.Customer_Landline2" maxlength="12" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 1.</span>
-                <input type="text" class="form-control" placeholder="Enter email address 1." name="Customer.Customer_Email1" value="@Model.Customer.Customer_Email1" maxlength="50" />
+                <input type="text" class="form-control" placeholder="Enter email address 1." id="txtCustomer_Email1" name="Customer.Customer_Email1" value="@Model.Customer.Customer_Email1" maxlength="50" />
             </div>
 
             <div class="form-group">
                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Email 2.</span>
-                <input type="text" class="form-control" placeholder="Enter email address 2." name="Customer.Customer_Email2" value="@Model.Customer.Customer_Email2" maxlength="50" />
+                <input type="text" class="form-control" placeholder="Enter email address 2." id="txtCustomer_Email2" name="Customer.Customer_Email2" value="@Model.Customer.Customer_Email2" maxlength="50" />
             </div>
         </div>
 
